--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ i {
 /* ====== POP-UP ====== */
 /* ====== POP-UP ====== */
 #popup {
+    padding: 0 15px;
     background-color: #A63740;
     height: 65px;
     position: relative;
@@ -56,16 +57,19 @@ i {
 /* ====== HEADER ====== */
 /* ====== HEADER ====== */
 header {
-    background: linear-gradient(to right, #9B3235, #000000);
+    background: linear-gradient(to right, #9B3235 7%, #000000 65%);
     color: #fff;
 }
 .container-header-movie {
     display: flex;
+}
+.container-header-movie .image-movie {
     padding: 1.5rem 2.5rem 4rem 2.5rem;
 }
 .all-text-movie {
     margin-top: auto;
     margin-left: 2rem;
+    padding-bottom: 4rem;
 }
 .all-text-movie .text-movie h1 {
     font-size: 40px;
@@ -102,7 +106,6 @@ header {
     background-repeat: no-repeat;
     background-position: right;
     width: 100%;
-    opacity: 0.4;
 }
 
 
@@ -162,4 +165,14 @@ main .navbar-movie ul li a:hover::after {
 .propal-one-movie p {
     font-size: 20px;
     color: #fff;
+}
+
+
+/* ====== MEDIA QUERY ====== */
+/* ====== MEDIA QUERY ====== */
+/* ====== MEDIA QUERY ====== */
+@media (max-width: 1200px) {
+    .cover-img-movie {
+        display: none;
+    }
 }
